CSCI320-ProgrammingConcepts/Homework3/output/cminusParser.java
// $ANTLR 3.4 C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g 2011-10-09 20:25:22

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.debug.*;
import java.io.IOException;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class cminusParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "NUM", "'!'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'else'", "'if'", "'int'", "'return'", "'void'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__6=6;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int ID=4;
    public static final int NUM=5;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "simpleexpression", "mulop", "synpred1_cminus", "declarationlist", 
    "synpred2_cminus", "params", "selectionstmt", "iterationstmt", "localdeclarations", 
    "factor", "expressionstmt", "addop", "expression", "term", "statement", 
    "relop", "call", "args", "additiveexpression", "typespecifier", "returnstmt", 
    "arglist", "fundeclaration", "statementlist", "param", "vardeclaration", 
    "var", "paramlist", "compoundstmt", "declaration", "program"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false, 
        true, false, true, false, false, false, false, false, false, false, 
        false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public cminusParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public cminusParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this, port, null);

        setDebugListener(proxy);
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
    }

public cminusParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg, new RecognizerSharedState());
}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

    public String[] getTokenNames() { return cminusParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g"; }



    // $ANTLR start "program"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:3:1: program : declarationlist ;
    public final void program() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "program");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(3, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:3:9: ( declarationlist )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:3:11: declarationlist
            {
            dbg.location(3,11);
            pushFollow(FOLLOW_declarationlist_in_program10);
            declarationlist();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(3, 25);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "program");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "declarationlist"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:5:1: declarationlist : ( declaration ) ( declaration )* ;
    public final void declarationlist() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declarationlist");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(5, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:2: ( ( declaration ) ( declaration )* )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:5: ( declaration ) ( declaration )*
            {
            dbg.location(6,5);
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:5: ( declaration )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:6: declaration
            {
            dbg.location(6,6);
            pushFollow(FOLLOW_declaration_in_declarationlist21);
            declaration();

            state._fsp--;
            if (state.failed) return ;

            }

            dbg.location(6,19);
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:19: ( declaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==25||LA1_0==27) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:6:20: declaration
            	    {
            	    dbg.location(6,20);
            	    pushFollow(FOLLOW_declaration_in_declarationlist25);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(6, 32);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declarationlist");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declarationlist"



    // $ANTLR start "declaration"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:8:1: declaration : ( vardeclaration | fundeclaration );
    public final void declaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "declaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(8, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:9:2: ( vardeclaration | fundeclaration )
            int alt2=2;
            try { dbg.enterDecision(2, decisionCanBacktrack[2]);

            int LA2_0 = input.LA(1);

            if ( (LA2_0==25||LA2_0==27) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_2 = input.LA(3);

                    if ( (LA2_2==14||LA2_2==21) ) {
                        alt2=1;
                    }
                    else if ( (LA2_2==7) ) {
                        alt2=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(2);}

            switch (alt2) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:9:4: vardeclaration
                    {
                    dbg.location(9,4);
                    pushFollow(FOLLOW_vardeclaration_in_declaration37);
                    vardeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:10:4: fundeclaration
                    {
                    dbg.location(10,4);
                    pushFollow(FOLLOW_fundeclaration_in_declaration42);
                    fundeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(10, 17);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "declaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "declaration"



    // $ANTLR start "vardeclaration"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:12:1: vardeclaration : ( typespecifier ID ';' | typespecifier ID '[' NUM ']' ';' );
    public final void vardeclaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "vardeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(12, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:13:2: ( typespecifier ID ';' | typespecifier ID '[' NUM ']' ';' )
            int alt3=2;
            try { dbg.enterDecision(3, decisionCanBacktrack[3]);

            int LA3_0 = input.LA(1);

            if ( (LA3_0==25||LA3_0==27) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==14) ) {
                        alt3=1;
                    }
                    else if ( (LA3_2==21) ) {
                        alt3=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:13:4: typespecifier ID ';'
                    {
                    dbg.location(13,4);
                    pushFollow(FOLLOW_typespecifier_in_vardeclaration52);
                    typespecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(13,18);
                    match(input,ID,FOLLOW_ID_in_vardeclaration54); if (state.failed) return ;
                    dbg.location(13,21);
                    match(input,14,FOLLOW_14_in_vardeclaration56); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:14:5: typespecifier ID '[' NUM ']' ';'
                    {
                    dbg.location(14,5);
                    pushFollow(FOLLOW_typespecifier_in_vardeclaration62);
                    typespecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(14,19);
                    match(input,ID,FOLLOW_ID_in_vardeclaration64); if (state.failed) return ;
                    dbg.location(14,22);
                    match(input,21,FOLLOW_21_in_vardeclaration66); if (state.failed) return ;
                    dbg.location(14,26);
                    match(input,NUM,FOLLOW_NUM_in_vardeclaration68); if (state.failed) return ;
                    dbg.location(14,30);
                    match(input,22,FOLLOW_22_in_vardeclaration70); if (state.failed) return ;
                    dbg.location(14,34);
                    match(input,14,FOLLOW_14_in_vardeclaration72); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(15, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "vardeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "vardeclaration"



    // $ANTLR start "typespecifier"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:17:1: typespecifier : ( 'int' | 'void' );
    public final void typespecifier() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "typespecifier");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(17, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:18:2: ( 'int' | 'void' )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:
            {
            dbg.location(18,2);
            if ( input.LA(1)==25||input.LA(1)==27 ) {
                input.consume();
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                dbg.recognitionException(mse);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(18, 17);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "typespecifier");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "typespecifier"



    // $ANTLR start "fundeclaration"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:20:1: fundeclaration : typespecifier ID '(' params ')' compoundstmt ;
    public final void fundeclaration() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "fundeclaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(20, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:21:2: ( typespecifier ID '(' params ')' compoundstmt )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:21:4: typespecifier ID '(' params ')' compoundstmt
            {
            dbg.location(21,4);
            pushFollow(FOLLOW_typespecifier_in_fundeclaration97);
            typespecifier();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(21,18);
            match(input,ID,FOLLOW_ID_in_fundeclaration99); if (state.failed) return ;
            dbg.location(21,21);
            match(input,7,FOLLOW_7_in_fundeclaration101); if (state.failed) return ;
            dbg.location(21,25);
            pushFollow(FOLLOW_params_in_fundeclaration103);
            params();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(21,32);
            match(input,8,FOLLOW_8_in_fundeclaration105); if (state.failed) return ;
            dbg.location(21,36);
            pushFollow(FOLLOW_compoundstmt_in_fundeclaration107);
            compoundstmt();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(21, 47);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "fundeclaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "fundeclaration"



    // $ANTLR start "params"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:23:1: params : ( paramlist | 'void' );
    public final void params() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "params");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(23, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:23:8: ( paramlist | 'void' )
            int alt4=2;
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            int LA4_0 = input.LA(1);

            if ( (LA4_0==27) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==ID) ) {
                    alt4=1;
                }
                else if ( (LA4_1==8) ) {
                    alt4=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else if ( (LA4_0==25) ) {
                alt4=1;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:23:10: paramlist
                    {
                    dbg.location(23,10);
                    pushFollow(FOLLOW_paramlist_in_params116);
                    paramlist();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:23:22: 'void'
                    {
                    dbg.location(23,22);
                    match(input,27,FOLLOW_27_in_params120); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(23, 27);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "params");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "params"



    // $ANTLR start "paramlist"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:25:1: paramlist : ( param ) ( ',' param )* ;
    public final void paramlist() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "paramlist");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(25, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:2: ( ( param ) ( ',' param )* )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:4: ( param ) ( ',' param )*
            {
            dbg.location(26,4);
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:4: ( param )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:5: param
            {
            dbg.location(26,5);
            pushFollow(FOLLOW_param_in_paramlist130);
            param();

            state._fsp--;
            if (state.failed) return ;

            }

            dbg.location(26,12);
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:12: ( ',' param )*
            try { dbg.enterSubRule(5);

            loop5:
            do {
                int alt5=2;
                try { dbg.enterDecision(5, decisionCanBacktrack[5]);

                int LA5_0 = input.LA(1);

                if ( (LA5_0==11) ) {
                    alt5=1;
                }


                } finally {dbg.exitDecision(5);}

                switch (alt5) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:26:13: ',' param
            	    {
            	    dbg.location(26,13);
            	    match(input,11,FOLLOW_11_in_paramlist134); if (state.failed) return ;
            	    dbg.location(26,17);
            	    pushFollow(FOLLOW_param_in_paramlist136);
            	    param();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);
            } finally {dbg.exitSubRule(5);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(27, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "paramlist");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "paramlist"



    // $ANTLR start "param"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:29:1: param : ( typespecifier ID | typespecifier ID '[' ']' );
    public final void param() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "param");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(29, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:29:7: ( typespecifier ID | typespecifier ID '[' ']' )
            int alt6=2;
            try { dbg.enterDecision(6, decisionCanBacktrack[6]);

            int LA6_0 = input.LA(1);

            if ( (LA6_0==25||LA6_0==27) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ID) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==21) ) {
                        alt6=2;
                    }
                    else if ( (LA6_2==8||LA6_2==11) ) {
                        alt6=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;

                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }
            } finally {dbg.exitDecision(6);}

            switch (alt6) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:29:9: typespecifier ID
                    {
                    dbg.location(29,9);
                    pushFollow(FOLLOW_typespecifier_in_param149);
                    typespecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(29,23);
                    match(input,ID,FOLLOW_ID_in_param151); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:30:4: typespecifier ID '[' ']'
                    {
                    dbg.location(30,4);
                    pushFollow(FOLLOW_typespecifier_in_param156);
                    typespecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    dbg.location(30,18);
                    match(input,ID,FOLLOW_ID_in_param158); if (state.failed) return ;
                    dbg.location(30,21);
                    match(input,21,FOLLOW_21_in_param160); if (state.failed) return ;
                    dbg.location(30,25);
                    match(input,22,FOLLOW_22_in_param162); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(31, 1);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "param");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "param"



    // $ANTLR start "compoundstmt"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:33:1: compoundstmt : '{' localdeclarations statementlist '}' ;
    public final void compoundstmt() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "compoundstmt");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(33, 0);

        try {
            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:34:2: ( '{' localdeclarations statementlist '}' )
            dbg.enterAlt(1);

            // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:34:4: '{' localdeclarations statementlist '}'
            {
            dbg.location(34,4);
            match(input,29,FOLLOW_29_in_compoundstmt174); if (state.failed) return ;
            dbg.location(34,8);
            pushFollow(FOLLOW_localdeclarations_in_compoundstmt176);
            localdeclarations();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(34,26);
            pushFollow(FOLLOW_statementlist_in_compoundstmt178);
            statementlist();

            state._fsp--;
            if (state.failed) return ;
            dbg.location(34,40);
            match(input,30,FOLLOW_30_in_compoundstmt180); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(34, 42);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "compoundstmt");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return ;
    }
    // $ANTLR end "compoundstmt"



    // $ANTLR start "localdeclarations"
    // C:\\Users\\Mercy\\Dropbox\\college stuff\\Computer science\\CSCI320-ProgrammingConcepts\\Homework3\\cminus.g:36:1: localdeclarations : ( vardeclaration )* ;
    public final void localdeclarations() throws RecognitionException {
        try { dbg.enterRule(getGrammarFileName(), "localdeclarations");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(36, 0);
